RESOLVED FIXED271449
Invalidate SVG filter results in SVGResourcesCache::clientLayoutChanged()
https://bugs.webkit.org/show_bug.cgi?id=271449
Summary Invalidate SVG filter results in SVGResourcesCache::clientLayoutChanged()
Ahmad Saleem
Reported 2024-03-21 22:27:22 PDT
Hi Team, While looking into Blink commits, I noticed that we fail following test: Test Case: https://jsfiddle.net/LqaFY/show ^ Safari Technology Preview 190 and Minibrowser does not show any text in container while Chrome Canary 125 does. Blink Commit: https://chromium.googlesource.com/chromium/blink/+/25d72ebd50bec9a4caa426e735e5ee7292c4da69 WebKit Source: https://searchfox.org/wubkat/rev/1ad9a7beb555644c0b5f949b8f635e305018ab4a/Source/WebCore/rendering/svg/SVGResourcesCache.cpp#122 I change following: if (renderer.selfNeedsLayout() && hasResourcesRequiringRemovalOnClientLayoutChange(*resources)) to if ((renderer.selfNeedsLayout() || resources->filter()) && hasResourcesRequiringRemovalOnClientLayoutChange(*resources)) __ then we start passing above test, although we don't have this bug in Layer-based SVG engine. I am not sure how much it be worth to fix it in legacy and we already passing test case mentioned in the bug. Just raising to track it down. Thanks!
Attachments
EWS
Comment 1 2024-03-28 16:07:21 PDT
Committed 276808@main (34cb73b0f69d): <https://commits.webkit.org/276808@main> Reviewed commits have been landed. Closing PR #26537 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-03-28 16:08:16 PDT
Note You need to log in before you can comment on or make changes to this bug.